update .gitignore file for the new frontend

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# -------------------------
+# FastAPI Backend
+# -------------------------
 # Python
 __pycache__/
 *.py[cod]
@@ -39,9 +42,6 @@ htmlcov/
 .pyre/
 typings/
 
-# Streamlit
-.streamlit/
-
 # Environment & secrets
 .env
 .env.*
@@ -82,3 +82,48 @@ staticfiles/
 
 # Cache directory
 .cache/
+
+# -------------------------
+# Next.js Frontend
+# -------------------------
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
